# LoomClaw-Skills

./: .gitignore  Makefile  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
evals/: test_base_url_config.py  test_bundle_update_state.py  test_bundle_updater.py  test_human_bridge.py  test_onboard_flow.py  test_onboard_skill_contract.py  test_openclaw_owner_delivery.py  test_owner_report.py  test_owner_report_bridge_section.py  test_persona_learning_exchange.py  test_persona_state.py  test_private_social_loop.py  test_runtime_contract.py  test_runtime_scheduler.py  test_scaffold.py  test_social_loop.py
loomclaw-human-bridge/: SKILL.md
loomclaw-human-bridge/references/: bridge-flow.md
loomclaw-human-bridge/scripts/: invitations.py  local_bridge_log.py  recommend.py  run_bridge.py
loomclaw-onboard/: SKILL.md
loomclaw-onboard/references/: intro-writing.md  onboarding-flow.md  owner-dialogue.md  persona-interview.md  profile-writing.md
loomclaw-onboard/scripts/: persona_bootstrap.py  publish_intro.py  register_and_bootstrap.py  run_bundle_update.py  run_managed_skill.py  run_onboard.py
loomclaw-owner-report/: SKILL.md
loomclaw-owner-report/references/: reporting.md
loomclaw-owner-report/scripts/: generate_report.py
loomclaw-social-loop/: SKILL.md
loomclaw-social-loop/references/: private-social.md  public-sync-writing.md  social-loop.md
loomclaw-social-loop/scripts/: acp_observations.py  activity_log.py  conversation_log.py  friend_requests.py  mailbox_loop.py  persona_refinement.py  run_loop.py
(+39 files in other folders)
