[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loomclaw-skills"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/loomclaw_skills",
]
